r1649/sofa-dev : Documentation of the Ray Traced collision detection, and referenced the articulatedBodies latex in the main sofa documentation, also added a chapter dedicated to modules documentation.
 //partial sync (17/18 changes)//

--- a/sofadocumentation.tex
+++ b/sofadocumentation.tex
@@ -32,7 +32,10 @@ This is the Sofa documentation
 \chapter{Design}
 \graphicspath{{design/}}  % to include images
 \input{design/design_body}
-
+\chapter{Modules}
+\graphicspath{{modules/}}  % to include images
+In this document we explain the usage and the fucntionalities of the modules developped using the Core Sofa Framework.
+\input{modules/modules_body}
 % This chapter is defined here
 \chapter{How to contribute to this documentation}
 \section{Document structure}
