--- a/introduction/introduction_body.tex
+++ b/introduction/introduction_body.tex
@@ -11,13 +11,18 @@
 \sofa is an open-source C++ library for physical simulation, primarily targeted to medical simulation.
 It can be used as an external library in another program, or using one of the associated GUI applications.
 
-The main feature of \sofa  compared with other libraries is its high flexibility. It allows the use of multiple interacting geometrical models of the same object, typically, a mechanical model with mass and constitutive laws, a collision model with simple geometry, and a visual model with detailed geometry and rendering parameters. Each model can be designed independently of the others. During run-time, consistency is maintained using mappings.
+The main feature of \sofa  compared with other libraries is its high flexibility. 
+It allows the use of multiple interacting geometrical models of the same object, typically, a mechanical model with mass and constitutive laws, a collision model with simple geometry, and a visual model with detailed geometry and rendering parameters. 
+Each model can be designed independently of the others. 
+During run-time, consistency is maintained using mappings.
 
 
-Additionally, \sofa  scenes are modeled using a data structure similar to hierarchical scene graphs commonly used in graphics libraries. This allows the splitting of the physical objects into collections of independent components, each of them describing one feature of the model, such as mass, force functions and constraints.
+Additionally, \sofa  scenes are modeled using a data structure similar to hierarchical scene graphs commonly used in graphics libraries. 
+This allows the splitting of the physical objects into collections of independent components, each of them describing one feature of the model, such as mass, force functions and constraints.
 For example, you can replace spring forces with finite element forces by simply replacing one component with another, all the rest (mass, collision geometry, time integration, etc.) remaining unchanged.
 
-Moreover, simulation algorithms, such as time integration or collision detection and modeling, are also modeled as components in the scene graph. This provides us with the same flexibility for algorithms as for models.
+Moreover, simulation algorithms, such as time integration or collision detection and modeling, are also modeled as components in the scene graph. 
+This provides us with the same flexibility for algorithms as for models.
 
 Flexibility allows one to focus on its own domain of competence, while re-using the other's contributions on other topics.
 However, efficiency is a major issue, and we have tried to design a framework which allows both efficiency and flexibility.
@@ -25,18 +30,23 @@ However, efficiency is a major issue, and we have tried to design a framework wh
 
 
 \section{Commented example} \label{sec:commentedExample}
-Figure~\ref{fig:mixedPendulum} shows a simple scene composed of two different objets, one rigid body and one particle system, and linked by a spring.
+Figure~\ref{fig:mixedPendulum} shows a simple scene composed of two different objects, one rigid body and one particle system, and linked by a spring.
 \begin{figure}
  \centering
  \includegraphics[width=0.9\linewidth]{mixedPendulum.png}
- \caption{A pendulum composed of a rigid body (reference frame and yellow point) attached to an elastic string (green) fixed at one end (pink point). The corresponding scene graph is displayed on the left.}
+ \caption{A pendulum composed of a rigid body (reference frame and yellow point) attached to an elastic string (green) fixed at one end (pink point). 
+ The corresponding scene graph is displayed on the left.}
  \label{fig:mixedPendulum}
 \end{figure}
-This scene is modeled and simulated in C++ as shown in section~\ref{cpp:hybrid}. The corresponding scene graph is shown in figure~\ref{fig:mixedPendulum-graph}. Note that the graph in the left of figure~\ref{fig:mixedPendulum} only displays a hierarchical view, while the whole graph includes additional pointers displayed as dashed arrows in figure~\ref{fig:mixedPendulum-graph}.
+This scene is modeled and simulated in C++ as shown in section~\ref{cpp:hybrid}. 
+The corresponding scene graph is shown in figure~\ref{fig:mixedPendulum-graph}. 
+Note that the graph in the left of figure~\ref{fig:mixedPendulum} only displays a hierarchical view, while the whole graph includes additional pointers displayed as dashed arrows in figure~\ref{fig:mixedPendulum-graph}.
 \begin{figure}
  \centering
  \includegraphics[width=\linewidth]{mixedPendulum-graph}
- \caption{The scene graph of the mixed pendulum. The nodes are displayed as grey hexagons, while the components are displayed as rectangles with colors associated with their types or roles. The bold plain arrows denote node hierarchy, while the thin plain arrows point to the components attached to the nodes, and the dotted arrows denote pointers between components.}
+ \caption{The scene graph of the mixed pendulum. 
+ The nodes are displayed as grey hexagons, while the components are displayed as rectangles with colors associated with their types or roles. 
+ The bold plain arrows denote node hierarchy, while the thin plain arrows point to the components attached to the nodes, and the dotted arrows denote pointers between components.}
  \label{fig:mixedPendulum-graph}
 \end{figure}
 
@@ -44,33 +54,48 @@ The scene is modeled as a tree structure with four nodes:
 \begin{itemize}
  \item \texttt{root}
  \item \texttt{deformableBody} corresponds to the elastic string
- \item \texttt{rigidBody} corrsponds to the rigid object
+ \item \texttt{rigidBody} corresponds to the rigid object
  \item \texttt{rigidParticles} corresponds to a set of particles (only one in this case) attached to the rigid body
 \end{itemize}
-Each node can have children nodes and \textit{components}. Each component implements a reduced set of functionalities.
+Each node can have children nodes and \textit{components}. 
+Each component implements a reduced set of functionalities.
 
 
 One of the most important type of component is the \texttt{MechanicalObject}, which contains a list of \textit{degrees of freedom} (DOF), i.e. coordinates, velocities, and associated auxiliary vectors such as forces and accelerations.
-All the coordinates in a \texttt{MechanicalObject} have the same type, e.g. 3D vectors particles, or (translation, rotation) pairs for rigid bodies. \texttt{MechanicalObject}, like many other \sofa classes, is a generic (C++ template) class instantiated on the types of DOF it stores.
+All the coordinates in a \texttt{MechanicalObject} have the same type, e.g. 3D vectors for particles, or (translation, rotation) pairs for rigid bodies. 
+\texttt{MechanicalObject}, like many other \sofa classes, is a generic (C++ template) class instantiated on the types of DOF it stores.
 The particle DOFs are drawn as white points, whereas the rigid body DOFs are drawn as red, green, blue reference frame axes.
-There can be at most one \texttt{MechanicalObject} attached to a given node. This guarantees that all the components attached to the same node process the same types of DOF. Consequently, the particles and the rigid body necessarily belong to different nodes.
+There can be at most one \texttt{MechanicalObject} attached to a given node. 
+This guarantees that all the components attached to the same node process the same types of DOF. 
+Consequently, the particles and the rigid body necessarily belong to different nodes.
 
 In this example, the masses are stored in \texttt{UniformMass} components.
 The types of their values are related to the types of their associated DOF.
-\texttt{UniformMass} is derived from the abstract \texttt{Mass} class, and stores only one value, for the case where all the associated objects have the same mass. If necessary, it can replaced by a \texttt{DiagonalMass} instanciated on the same DOF types, for the case where the associated objects have different masses. This is an important feature of \sofa: each component can be replaced by another one deriving from the same abstract class and instanciated on the same DOF types. This results in a high flexibility.
+\texttt{UniformMass} is derived from the abstract \texttt{Mass} class, and stores only one value, for the case where all the associated objects have the same mass. 
+If necessary, it can replaced by a \texttt{DiagonalMass} instanciated on the same DOF types, for the case where the associated objects have different masses. 
+This is an important feature of \sofa: each component can be replaced by another one deriving from the same abstract class and instantiated on the same DOF types. 
+This results in a high flexibility.
 
-The \texttt{FixedConstraint} component attaches a particle to a fixed point in world space, drawn in pink. The constraints act as filters which cancel the forces and displacements applied to their associated particle(s). They do not model more complex constraints such as maintaining three points aligned.
+The \texttt{FixedConstraint} component attached a particle to a fixed point in world space, drawn in pink. 
+The constraints act as filters which cancel the forces and displacements applied to their associated particle(s). 
+They do not model more complex constraints such as maintaining three points aligned.
 
 The \texttt{StiffSpringForceField} stores a list of springs, each of them modeled by a pair of indices, as well as the standard physical parameters, stiffness, damping and rest length.
 
 The rigid body is connected to the deformable string by a spring.
 Since this spring is shared by the two bodies, it is modeled in the \texttt{StiffSpringForceField} attached to a common ancestor, the graph root in this example.
-Our springs can only connect particles. We thus need to attach a particle to the rigid body. Since the particle DOFs types are different from the rigid body DOF types, they have to be stored in another \texttt{MechanicalObject}, called \texttt{rigidParticleDOF} in this example, and attached to a different node.
-However, \texttt{rigidParticleDOF} is not a set of independent DOF, since they are fixed in the reference frame of the rigid body. We thus attach it to a child node of the rigid body, and connect it to \texttt{rigidDOF} using a \texttt{RigidMapping}. This component stores the coordinates of the particle in the reference frame of the rigid body. Its task is to propagate the position, velocity and displacement of the rigid body down to the yellow particle, and conversely, to propagate the forces applied to the particle up to the rigid body.
+Our springs can only connect particles. 
+We thus need to attach a particle to the rigid body. 
+Since the particle DOFs types are different from the rigid body DOF types, they have to be stored in another \texttt{MechanicalObject}, called \texttt{rigidParticleDOF} in this example, and attached to a different node.
+However, \texttt{rigidParticleDOF} is not a set of independent DOF, since they are fixed in the reference frame of the rigid body. We thus attach it to a child node of the rigid body, and connect it to \texttt{rigidDOF} using a \texttt{RigidMapping}. 
+This component stores the coordinates of the particle in the reference frame of the rigid body. 
+Its task is to propagate the position, velocity and displacement of the rigid body down to the yellow particle, and conversely, to propagate the forces applied to the particle up to the rigid body.
 
-Mappings are one of the major features of \sofa. They allow us to use different geometric models for a given body, e.g. a coarse tetrahedral mesh for viscoelastic internal forces, a set of spheres for collision detection and modeling, and a fine triangular mesh for rendering.
+Mappings are one of the major features of \sofa. 
+They allow us to use different geometric models for a given body, e.g. a coarse tetrahedral mesh for viscoelastic internal forces, a set of spheres for collision detection and modeling, and a fine triangular mesh for rendering.
 
-The gravity applied to the scene is modeled in the \texttt{Gravity} component near the root. It applies to all the scene, unless locally overloaded by another gravity component inside a branch of the tree.
+The gravity applied to the scene is modeled in the \texttt{Gravity} component near the root. 
+It applies to all the scene, unless locally overloaded by another gravity component inside a branch of the tree.
 
 The abstract component classes are defined in namespace \texttt{core::componentmodel}.
 
@@ -78,7 +103,7 @@ So far, we have discussed the physical model of the scene.
 To animate it, we need to solve an \textit{Ordinary Differential Equation} (ODE) in time.
 There are plenty of ODE solvers, and \sofa allows the design and the re-use of a wide variety of them.
 Here we use a simple explicit Euler method, modeled using an \texttt{EulerSolver} component.
-It triggers computations such as force acumulation, acceleration computation and linear operations on state vectors.
+It triggers computations such as force accumulation, acceleration computation and linear operations on state vectors.
 More sophisticated solvers are available in \sofa, and can be used by simply replacing the  \texttt{EulerSolver} component by another one, e.g \texttt{RungeKutta4} or \texttt{CGImplicit}.
 
 Other capabilities of \sofa, such as collision detection and response, will be discussed in subsequent sections.
@@ -98,20 +123,39 @@ The liver exhibits three different geometries for mechanics, rendering and colli
 The corresponding xml code is given in section~\ref{xml:liver}.
 \label{bla:liver}
 
-On top of the scene, collision-related components allow a user to interact with the collision models using rays casted from the mouse pointer and hitting collision models. %Collision is discussed in section~\ref{sec:collision}.
+On top of the scene, collision-related components allow a user to interact with the collision models using rays casted from the mouse pointer and hitting collision models. 
+%Collision is discussed in section~\ref{sec:collision}.
 
-The liver is modeled using three nodes, in two levels. The parent level contains the mechanical dofs (particle positions and velocities) in a \texttt{MechanicalObject} component. These dofs are the mechanically independent degrees of freedom of the object, in Lagrange's formalism. The node also contains components related to the dynamics of the particles, such as mass and internal forces. We call it the \textit{behavior model}.
+The liver is modeled using three nodes, in two levels. 
+The parent level contains the mechanical DOFs (particle positions and velocities) in a \texttt{MechanicalObject} component. 
+These DOFs are the mechanically independent degrees of freedom of the object, in Lagrange's formalism. 
+The node also contains components related to the dynamics of the particles, such as mass and internal forces. 
+We call it the \textit{behavior model}.
 
-The two other nodes are in the lower level because during the simulation, their coordinates are totally defined by the coordinates of their parent node. Thus, they do not belong to the set of mechanically independent dofs. \emph{Mappings} are used to compute their positions and velocities based on their parent's, using the pointers represented as dashed arrows. Mappings are not symmetric. The motion of the parent dofs is mapped to the children dofs, whereas the motion of the children dofs is not mapped to their parent. This ensures consistency.
+The two other nodes are in the lower level because during the simulation, their coordinates are totally defined by the coordinates of their parent node. 
+Thus, they do not belong to the set of mechanically independent DOFs. 
+\emph{Mappings} are used to compute their positions and velocities based on their parent's, using the pointers represented as dashed arrows. 
+Mappings are not symmetric. 
+The motion of the parent DOFs is mapped to the children DOFs, whereas the motion of the children DOFs is not mapped to their parent. 
+This ensures consistency.
 
-The \texttt{VisualModel} has vertices which are used for rendering, along with other rendering data such as a list of polygons, normals, etc. The mapping is one-way and the mapped dofs have no mechanical influence.
+The \texttt{VisualModel} has vertices which are used for rendering, along with other rendering data such as a list of polygons, normals, etc. 
+The mapping is one-way and the mapped DOFs have no mechanical influence.
 
-The \texttt{SphereModel} class derives from \texttt{MechanicalObject}, with an additional radius value. It also derives from \texttt{CollisionModel}, which allows it to be processed by the collision detection and modeling pipeline. When contact or mouse interaction forces are applied to the spheres, the forces are propagated bottom-up to their parent dofs by the mapping. This allows the contact forces to be taken into account in the dynamics equations. The mapping is thus two-ways and derives from \texttt{MechanicalMapping} instead of \texttt{Mapping}. This is why it has a different color in the image of the scene graph.
+The \texttt{SphereModel} class derives from \texttt{MechanicalObject}, with an additional radius value. 
+It also derives from \texttt{CollisionModel}, which allows it to be processed by the collision detection and modeling pipeline. 
+When contact or mouse interaction forces are applied to the spheres, the forces are propagated bottom-up to their parent DOFs by the mapping. 
+This allows the contact forces to be taken into account in the dynamics equations. 
+The mapping is thus two-ways and derives from \texttt{MechanicalMapping} instead of \texttt{Mapping}. 
+This is why it has a different color in the image of the scene graph.
 Again, the mechanical mappings are not symmetric: the forces are propagated from the children to the parents, not the other way round.
 
 Mappings only propagate positions top-down, whereas MechanicalMappings additionally propagate velocities top-down and forces bottom-up.
 
-Mapped models can be designed independently of their parent models, provided that the adequate (mechanical) mapping is available. This results in a high flexibility. For example, collision spheres can be replaced by collision triangles without changing anything in the behavior model or in the visual model. Similarly, other visual models can be used without modifying the behavior and collision models, and different behavior models can be used with the same collision and visual models, as illustrated in figure~\ref{fig:behaviormodels}.
+Mapped models can be designed independently of their parent models, provided that the adequate (mechanical) mapping is available. 
+This results in a high flexibility. 
+For example, collision spheres can be replaced by collision triangles without changing anything in the behavior model or in the visual model. 
+Similarly, other visual models can be used without modifying the behavior and collision models, and different behavior models can be used with the same collision and visual models, as illustrated in figure~\ref{fig:behaviormodels}.
 
 \begin{figure}
  \centering
@@ -136,17 +180,19 @@ repeat {
 \caption{Pseudocode for a standard simulation program.}
 \label{pc:animationloop}
 \end{figure}
-In \sofa, each of the simulation methods is implemented as a recursive graph traversal, \texttt{InitVisitor}, \texttt{AnimateVisitor} and \texttt{VisualDrawVisitor}, respectively. Visitors are explained in the next section.
+In \sofa, each of the simulation methods is implemented as a recursive graph traversal, \texttt{InitVisitor}, \texttt{AnimateVisitor} and \texttt{VisualDrawVisitor}, respectively. 
+Visitors are explained in the next section.
 
 \subsection{Visitors}
-The data structure is processed using visitors called \emph{visitors}.
+The data structure is processed using objects called \emph{visitors}.
 They recursively traverse the tree structure and call appropriate virtual methods to a subset of components during the \textit{Top-Down Traversal} (TDT), using virtual method \texttt{Visitor::processNodeTopDown}, then during the \textit{Bottom-Up Traversal} (BUT), using virtual method \texttt{Visitor::processNodeBottomUp}.
 
 For example, the \texttt{VisualDrawVisitor} draws the \texttt{VisualModel} components during the TDT, and does nothing during the BUT.
-The \texttt{MechanicalComputeForceVisitor} accumulates the forces in the appropriate dof vectors during the TDT, then propagates the forces to the parent dofs using the mechanical mappings during the BUT.
+The \texttt{MechanicalComputeForceVisitor} accumulates the forces in the appropriate DOF vectors during the TDT, then propagates the forces to the parent DOFs using the mechanical mappings during the BUT.
 
-When processed by a visitor$a$, a component can fire another visitor $b$ through its associated sub-tree. Visitor $a$ can continue once visitor $b$ is finished.
-During the TDT, each traversed component decides wether the calling visitor continues, or prunes the sub-tree associated with the component, or terminates.
+When processed by a visitor $a$, a component can fire another visitor $b$ through its associated sub-tree. 
+Visitor $a$ can continue once visitor $b$ is finished.
+During the TDT, each traversed component decides whether the calling visitor continues, or prunes the sub-tree associated with the component, or terminates.
 
 The components directly access their sibling components only, except for the mappings.
 A component traversed by a visitor can indirectly access the data in its associated sub-tree in read-write mode using visitors, whereas data in its parent graph is read-only and only partially accessible using method \texttt{getContext}.
@@ -156,9 +202,11 @@ The visitors belong to namespace \texttt{simulation::tree}.
 
 \subsection{ODE Solvers}
 When an \texttt{AnimateVisitor} traverses a node with an \texttt{OdeSolver} component,
-the solver takes the control of its associated subtree and prunes the \texttt{AnimateVisitor}. The solver triggers visitors in its associated subtree to perform the standard mechanical computations and integrate time.
+the solver takes the control of its associated subtree and prunes the \texttt{AnimateVisitor}. 
+The solver triggers visitors in its associated subtree to perform the standard mechanical computations and integrate time.
 
-The simplest solver is the explicit Euler method, implemented in \texttt{EulerSolver}. The algorithm is shown as pseudocode in figure~\ref{pc:expliciteuler}.
+The simplest solver is the explicit Euler method, implemented in \texttt{EulerSolver}. 
+The algorithm is shown as pseudocode in figure~\ref{pc:expliciteuler}.
 \begin{figure}
 \begin{code_cpp}
 f = 0
@@ -189,28 +237,36 @@ During the subtree traversal, the operator is applied to the given vectors of th
 For example, let us comment the visitors performed by the \texttt{EulerSolver} shown in figure~\ref{fig:mixedPendulum}. Its implementation is in method \texttt{component::odesolver::EulerSolver::solve(double)}.
 First, multivectors are declared.
 
-Then method \texttt{core::componentmodel::behavior::OdeSolver::computeForce(VecId)} is called. It first fires a \texttt{MechanicalResteForceVisitor} to reset the force vectors of all the \texttt{MechanicalObject} components. It then fires a  \texttt{MechanicalComputeForceVisitor}. During the TDT, each component derived from \texttt{core::componentmodel::behavior::BaseForceField} computes and accumulates its force in its sibling \texttt{MechanicalObject}. In the example shown in figure~\ref{fig:mixedPendulum}, \texttt{F13} adds its contribution to \texttt{Dof1} and \texttt{Dof2}, then \texttt{F1} and \texttt{M1} add their contributions to \texttt{Dof1}, then \texttt{M2} to \texttt{Dof2}. Then during the BUT, the mechanical mappings sum up the forces of their chid dof to their parent dof, \textit{i.e} the force in \texttt{Dof3} to \texttt{Dof2} through \texttt{M23} in the same example.
+Then method \texttt{core::componentmodel::behavior::OdeSolver::computeForce(VecId)} is called. 
+It first fires a \texttt{MechanicalResetForceVisitor} to reset the force vectors of all the \texttt{MechanicalObject} components. 
+It then fires a  \texttt{MechanicalComputeForceVisitor}. 
+During the TDT, each component derived from \texttt{core::componentmodel::behavior::BaseForceField} computes and accumulates its force in its sibling \texttt{MechanicalObject}. 
+In the example shown in figure~\ref{fig:mixedPendulum}, \texttt{F13} adds its contribution to \texttt{Dof1} and \texttt{Dof3}, then \texttt{F1} and \texttt{M1} add their contributions to \texttt{Dof1}, then \texttt{M2} to \texttt{Dof2}. 
+Then during the BUT, the mechanical mappings sum up the forces of their chid DOF to their parent DOF, \textit{i.e.}, the force in \texttt{Dof3} to \texttt{Dof2} through \texttt{M23} in the same example.
 Note that branches \texttt{deformableBody} and \texttt{rigidBody} can be processed in parallel.
 At the end, the force vector in \texttt{Dof1} contains the net force applied to the particles, and the force vector in \texttt{Dof2} contains the net (six-dimensional) force applied to the rigid body.
 
-Then method \texttt{OdeSolver::accFromF(VecId,VecId)} fires a \texttt{MechanicalAccFromFVisitor}. Each component derived from \texttt{core::componentmodel::behavior::BaseMass} computes the accelerations corresponding to the forces in its sibling \texttt{MechanicalObject}.
+Then method \texttt{OdeSolver::accFromF(VecId,VecId)} fires a \texttt{MechanicalAccFromFVisitor}. 
+Each component derived from \texttt{core::componentmodel::behavior::BaseMass} computes the accelerations corresponding to the forces in its sibling \texttt{MechanicalObject}.
 
-Then method \texttt{OdeSolver::projectResponse} fires a \texttt{MechanicalApplyConstraintsVisitor}. All the \texttt{core::componentmodel::behavior::BaseConstraint} components (component \texttt{C} in the example) filter the acceleration vector to maintain some points fixed.
+Then method \texttt{OdeSolver::projectResponse} fires a \texttt{MechanicalApplyConstraintsVisitor}. 
+All the \texttt{core::componentmodel::behavior::BaseConstraint} components (component \texttt{C} in the example) filter the acceleration vector to maintain some points fixed.
 
-Once the acceleration is computed, multivector methods are used to update the positions and velocities. Here again, visitors are used to perform the desired operation in each traversed \texttt{MechanicalObject}.
+Once the acceleration is computed, multivector methods are used to update the positions and velocities. 
+Here again, visitors are used to perform the desired operation in each traversed \texttt{MechanicalObject}.
 
 MultiVector operations are pruned at the first level for efficiency, because the solvers deal with the mechanically independent state variables rather than the mapped variables.
 Moreover, the mapped coordinates can not be assumed to vary linearly along with their parent variables.
-Applying a \texttt{MechanicalPropagatePositionAndVelocityVisitor} is thus necessary to update the mapped dofs based on the mechanically independent dofs.
+Applying a \texttt{MechanicalPropagatePositionAndVelocityVisitor} is thus necessary to update the mapped DOFs based on the mechanically independent DOFs.
 This visitor is automatically performed after time integration, as one can see in the code of method \\ \texttt{MechanicalIntegrationVisitor::fwdOdeSolver}.
-It is also used by some solvers when auxiliary states are needed, as discussed in section~\ref{sec:statevectors}, in order to update the mapped dofs.
+It is also used by some solvers when auxiliary states are needed, as discussed in section~\ref{sec:statevectors}, in order to update the mapped DOFs.
 
 \todo{Call tree of AnimateVisitor, restricted to sofa::core and sofa::simulation::tree}
 
 \todo{Discuss independent and shared solvers}
 
 \section{State vectors} \label{sec:statevectors}
-The state vectors contain the coordinates, velocites, and other dof-related values such as force and acceleration.
+The state vectors contain the coordinates, velocites, and other DOF-related values such as force and acceleration.
 They are stored in \texttt{MechanicalObject} components.
 This template class can be instanciated on a variety of types to model particles, rigid bodies or other types of bodies.
 The template parameter is a \texttt{DataTypes} class which describes data and data containers, such as the the type of coordinates and coordinate derivatives used.
@@ -227,7 +283,8 @@ Each \texttt{MechanicalObject} stores two arrays of state vectors, one for coord
  \label{fig:mechanicalobject}
 \end{figure}
 
-Auxiliary vectors are necessary for complex solvers, such as \texttt{RungeKutta2Solver}. This solver first performs a half-length Euler step, then evaluates the derivative of this new state (called the \emph{midpoint}), and finally uses this derivative to update the initial state over a whole time step.
+Auxiliary vectors are necessary for complex solvers, such as \texttt{RungeKutta2Solver}. 
+This solver first performs a half-length Euler step, then evaluates the derivative of this new state (called the \emph{midpoint}), and finally uses this derivative to update the initial state over a whole time step.
 
 To compute the forces at the midpoint while keeping the initial state for further use, we use the auxiliary vectors \texttt{newX} and \texttt{newV}.
 However, components such as forces and constraints use state vectors, and we have to make sure that they use the right ones.
@@ -235,15 +292,16 @@ To ensure consistency and make the use of auxiliary states transparent, the othe
 These methods return pointers to the appropriate vectors, as illustrated in figure~\ref{fig:mechanicalobject}.
 
 Internal  \texttt{MechanicalObject} switches are performed by methods \texttt{MechanicalObject::setX()}, \texttt{setV()}, \texttt{setF()} and  \texttt{setDx()}.
-These methods are applied by the visitors which take multivectors as parameters, before they use other components. See, for example, method\\ \texttt{MechanicalPropagatePositionAndVelocityVisitor::fwdMechanicalState}.
+These methods are applied by the visitors which take multivectors as parameters, before they use other components. 
+See, for example, method\\ \texttt{MechanicalPropagatePositionAndVelocityVisitor::fwdMechanicalState}.
 
 Note that some constraint-based animation methods require large state vectors and matrices encompassing all the mechanical objects of the scene.
 Such methods are currently under development in \sofa, and they are not yet documented.
-They use visitors to count the total number of scalar dofs and to gather them in large state vectors, as well as to build mechanical matrices  such as mass, stiffness, damping and compliance etc.
+They use visitors to count the total number of scalar DOFs and to gather them in large state vectors, as well as to build mechanical matrices  such as mass, stiffness, damping and compliance etc.
 
 \subsection{Mechanical groups}
 During the simulation, each solver prunes the \texttt{AnimateVisitor} which traverses it and manages its associated subtree by itself using other visitors.
-We call \emph{mechanical group} the objects animated by a given solver.
+The objects animated by a given solver are called a \emph{mechanical group}.
 Each mechanical group corresponds to a subtree in the scene graph.
 In the example discussed in section~\ref{sec:commentedExample}, there is one mechanical group because a single solver located near the root manages the whole scene.
 However, using separate solvers for different objects can sometimes increase efficiency.
